All works but weird behavior when multiple concurrent users. Probably race condition

--- a/src/AGISwarm/text2image_ms/app/gui.html
+++ b/src/AGISwarm/text2image_ms/app/gui.html
@@ -18,7 +18,7 @@
             <div id="image-output" class="image-output"></div>
             <div class="input-container">
                 <textarea id="prompt" class="form-control" placeholder="Enter your prompt" rows="2"></textarea>
-                <button onclick="sendMessage()" class="btn btn-primary" id="send-btn">Generate</button>
+                <button onclick="sendButtonClick()" class="btn btn-primary" id="send-btn">Send</button>
             </div>
             <textarea id="negative_prompt" class="form-control" placeholder="Enter your negative prompt" rows="2"></textarea>
         </div>
