--- a/src/AGISwarm/text2image_ms/app/gui.html
+++ b/src/AGISwarm/text2image_ms/app/gui.html
@@ -2,25 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stable Diffusion Streaming Interface</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--./style.css -->
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 <body>
     <div class="container">
-        <div class="generation-container">
-            <div class="generation-header">
+        <div class="chat-container">
+            <div class="chat-header">
                 <h1 id="title">Stable Diffusion Streaming</h1>
                 <button id="menu-toggle" class="btn btn-secondary menu-toggle"><i class="fas fa-bars"></i></button>
             </div>
-            <div id="image-output" class="image-output"></div>
+            <div id="chat-output" class="chat-output"></div>
             <div class="input-container">
-                <textarea id="prompt" class="form-control" placeholder="Enter your prompt" rows="2"></textarea>
+                <textarea id="prompt" class="form-control" placeholder="Enter your message" rows="1"></textarea>
                 <button onclick="sendButtonClick()" class="btn btn-primary" id="send-btn">Send</button>
             </div>
-            <textarea id="negative_prompt" class="form-control" placeholder="Enter your negative prompt" rows="2"></textarea>
+            <div class="input-container">
+                <textarea id="negative_prompt" class="form-control" placeholder="Enter your negative prompt"></textarea>
+            </div>
         </div>
         
         <div class="config-container">
